--- a/src/modules/Navbar/navbar.module.css
+++ b/src/modules/Navbar/navbar.module.css
@@ -3,6 +3,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+  border-bottom: 1px solid;
+  padding-bottom: 15px;
 }
 
 .menu {
